# snippets

./: .gitignore  README.md
140908_gut_buster/: LICENSE  README.md  gut-buster.go  scan-path.sh  squareplot.py
140908_gut_buster/dicts/: kellegous.txt  readme.txt
141114_rungen/: LICENSE  README.md  rungen.py
141114_rungen/routes/: bighouse.kml  giants.kml  runway.kml  threemile.kml
151019_dem_plotters/: README.org
151019_dem_plotters/uk-ea/: README.org  convert_to_bin.py  simple_plot_dtm.py  thresh_plot.py
160602_craigslist_scraper/: convert2text.py  grab_clist.py
160602_craigslist_scraper/plot_days/: num_days_on_list.csv  plot_num_days.py  plot_postsperpull.py  pulls_per_date.csv
191227_googleplus_to_orgmode/: .gitignore  LICENSE  README.md  find_unused.py  parsejson.py  squash_big.py
250221_planes_datasette/: README.md  digest_daily.py  pyproject.toml  run_all.sh
250221_planes_datasette/interesting-planes/carrier/: cargo.csv  executive.csv  medical.csv  organization.csv  passenger.csv
250221_planes_datasette/interesting-planes/regions/: bayarea.csv
260124_glucose/: README.md  cursor_plot_lingo_py_data_processing_en.md  plot_lingo.py  pyproject.toml
