[project]
name = "250221-planes-datasette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "datasette>=0.65.2",
    "datasette-geojson-map>=0.5.0",
    "geojson-to-sqlite>=1.1.1",
    "pandas>=2.3.3",
    "sqlite-utils>=3.39",
]
